--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,11 @@
 		"default_popup": "popup.html"
 	},
 	"permissions": [
+		"tabs",
 		"activeTab",
 		"storage"
-	]
+	],
+	"background": {
+		"page": "background.html"
+	}
 }
