add a basic notification display

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,13 @@
 	],
 	"background": {
 		"page": "background.html"
-	}
+	},
+	"content_scripts": [{
+		"matches": ["http://*/*", "https://*/*"],
+		"js": ["notifications.js"],
+		"css": ["notifications.css"]
+	}],
+	"web_accessible_resources": [
+		"coin.wav"
+	]
 }
