--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 
 	"name": "Tab Boss",
-	"description": "Cycles through tabs based on configurable sequences and events.",
+	"description": "Cycles through tabs and pushes notifications from a websocket.",
 	"version": "1.0",
 	"browser_action": {
 		"default_icon": "icon.png",
